add filter for api get nurses
