# controller/nurse_services/model/nurse.filter.model.go
@@ -1,0 +1,7 @@
+package nursemodel
+
+// Struct chứa các filter
+type NurseFilter struct {
+	FullName    string
+	PhoneNumber string
+}
